--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-   background-color: #4dadf7;
-  /* background-image: url('./Assets/asset\ 30.png'); */
-  /* background-size: 30rem; */
-  /* background-repeat: repeat; */
+  background-color: #4dadf7;
+  background-image: url(Assets/asset\ 32.png);
+  background-repeat: repeat;
+  background-size: 40rem;
+
 }
 
 .banner{
@@ -25,6 +26,12 @@
   text-align: center;
  
 }
+
+/****************************************************************/
+
+                        /* header */
+
+/****************************************************************/
 
 .header{
   display: flex;
@@ -64,7 +71,7 @@
 .main-nav-link:link,
 .main-nav-link:visited{
   color: #333;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 
 }
 
@@ -79,7 +86,7 @@
   border-radius: 3px;
   color: #333;
   font-weight: 500;
-  padding:0.8rem 1.8rem;
+  padding:1rem 2.4rem;
   text-align: center;
 }
 
@@ -92,7 +99,7 @@
 
 .sign-up-btn:link,
 .sign-up-btn:visited{
-  padding: 0.8rem 1.8rem;
+  padding: 1rem 2.4rem;
   color: #fff;
   font-weight: 500;
   text-align: center;
@@ -105,3 +112,393 @@
 .sign-up-btn:active{
 background-color: #1d69a3;
 }
+
+
+/****************************************************************/
+
+                        /* Home Section */
+
+/****************************************************************/
+
+.home-section{
+  margin-bottom: 4.8rem;
+}
+
+
+.home{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3.6rem;
+}
+
+.home-text-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 1.6rem;
+  padding:4.8rem 2.4rem;
+}
+
+.primary-heading{
+  font-size: 4.8rem;
+  font-weight: 500;
+  letter-spacing: -0.1rem;
+}
+
+.home-para{
+  line-height: 1.6;
+  font-size: 2rem;
+  margin-bottom: 2.4rem;
+}
+
+.cta-btn:link,
+.cta-btn:visited{
+  font-size: 1.6rem;
+  text-align: center;
+}
+
+
+.home-img-box{
+  padding: 1.8rem 2.4rem;
+  width: 120%;
+}
+
+.home-img{
+  width: 100%;
+}
+
+
+
+/****************************************************************/
+
+                        /* Companies section */
+
+/****************************************************************/
+
+.companies-section{
+  margin-bottom: 9.6rem;
+}
+
+.companies{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+
+.companies-heading{
+  font-size: 1.8rem;
+  color: #333;
+
+}
+
+.companies-logos{
+  display: flex;
+  gap:6.4rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logos{
+  height: 4.8rem;
+  width: 10.8rem;
+}
+
+.box-logo{
+  height:4rem;
+  width: 4rem;
+}
+
+
+.TaskRabbit-logo{
+  width: 14.8rem;
+  /* height: 20rem; */
+}
+
+
+/****************************************************************/
+
+                        /* Features section--1 */
+
+/****************************************************************/
+
+
+
+.backcolor{
+  background-image:url(./Assets/asset\ 34.svg);
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-position: center;
+
+
+}
+
+
+.features--1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 4.8rem;
+  padding: 3.2rem;
+  margin-bottom: 1.8rem;
+  
+}
+
+.fea-head{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.8rem;
+  flex-direction: column;
+}
+
+
+.heading-secondary{
+  color: #333;
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+
+.fea-col{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 4.8rem;
+}
+
+.feature{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 30rem;
+}
+
+.feature-icon{
+  height: 4rem;
+  width: 4rem;
+}
+
+.feature-heading{
+  font-size: 2.4rem;
+  font-weight:500;
+}
+
+.feature-para{
+  font-size: 2rem;
+  color: #555;
+  line-height: 1.6;
+  text-align: center;
+  margin-bottom: 1.6rem;
+
+}
+
+.learn-more-btn{
+  font-size: 1.6rem;
+  color:#555;
+  padding: 1.2rem 3.2rem;
+  font-weight: 600;
+  border: 1px solid #333;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.learn-more-btn:hover{
+  color: #2294ed;
+  border: 1px solid #2294ed;
+}
+
+
+/****************************************************************/
+
+                        /* Features section--1 */
+
+/****************************************************************/
+
+
+.features-section{
+  margin-bottom: 4.8rem;
+}
+
+.features--2{
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  margin-bottom: 2.4rem;
+  
+}
+
+.features-img-box{
+  padding-right: 1.8rem;
+}
+
+.features-img-box img{
+  max-width: 70rem;
+}
+
+.feature-img{
+
+  padding: 0 4.8rem;
+  width: 100%;
+
+}
+
+.features-text-box{
+  padding-right: 8.4rem;
+  padding-left: 3.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 55rem;
+}
+
+.tertairy-heading{
+  font-size: 1.8rem;
+  font-weight: 500;
+  color:var(--primary-text-color);
+}
+
+.feature-secondary{
+  color: var(--primary-text-color);
+  font-weight: 600;
+}
+
+.feature-para--2{
+  font-size: 2rem;
+  color: #647786;
+  margin-bottom: 2rem;
+  line-height: 1.6;
+}
+
+
+.testimonial{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-weight: 500;
+  padding: 1rem 4.8rem 1rem 0;
+  
+}
+
+.testimonial-logo{
+  max-height: 3.2rem;
+  max-width: 30%;
+  margin-bottom: 2.4rem;
+}
+
+
+
+.testimonial-para{
+  background-image: url(Assets/asset\ 35.svg);
+  background-repeat: no-repeat;
+  line-height: 1.4;
+  color: var(--primary-text-color);
+  margin-bottom: 1.8rem;
+}
+
+.contact{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1.8rem;
+}
+
+
+
+.testimonial-img{
+  height: 4.8rem;
+  width: 4.8rem;
+}
+
+.customer-name{
+  font-size: 1.8rem;
+  color: var(--primary-text-color);
+  margin-bottom: 0.5rem;
+}
+
+.customer-role{
+  font-size: 1.4rem;
+  color:#647786 ;
+}
+
+
+/* section--2 feautures */
+
+.philips-logo{
+  width: 20%;
+}
+
+
+
+
+/****************************************************************/
+
+                        /* Features section--1 */
+
+/****************************************************************/
+
+/* .exa-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+} */
+
+.exa-head{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 3.2rem;
+  margin-bottom: 3.2rem;
+}
+
+
+.examples{
+  display: flex;
+  gap: 3.2rem;
+}
+
+
+
+.exa{
+  display: flex;
+  flex-direction:column;
+  justify-content: flex-end;
+  height: 35rem;
+  width: 30rem;
+ 
+}
+
+
+
+.exa-links{
+  color: #fff;
+  font-size: 2.4rem;
+  font-weight: 600;
+}
+
+.exa1{
+  background-image: url(Assets/asset\ 36.jpeg);
+}
+.exa2{
+  background-image: url(Assets/asset\ 37.jpeg);
+}
+.exa3{
+  background-image: url(Assets/asset\ 38.jpeg);
+}
+.exa4{
+  background-image: url(Assets/asset\ 39.jpeg);
+}
+
+
+
+
